fetch recipe dari firebase, update cookmark status

--- a/app/src/main/res/layout/item_recipe_list.xml
+++ b/app/src/main/res/layout/item_recipe_list.xml
@@ -1,6 +1,5 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="211dp"
     android:layout_height="223dp"
     android:layout_marginHorizontal="5dp"
@@ -56,7 +55,7 @@
             android:layout_marginTop="17dp"
             android:src="@drawable/ic_cutlery"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/foodtype_icon"
+            app:layout_constraintStart_toEndOf="@+id/recipe_foodtype"
             app:layout_constraintTop_toTopOf="@+id/recipe_title" />
 
         <TextView
@@ -71,7 +70,7 @@
             android:textSize="16sp"
             android:ellipsize="end"
             android:maxLines="1"
-            app:layout_constraintBottom_toTopOf="@+id/foodtype_icon"
+            app:layout_constraintBottom_toTopOf="@+id/recipe_foodtype"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/recipe_cookmarks" />
 
@@ -88,13 +87,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_photo" />
 
-        <ImageView
-            android:id="@+id/foodtype_icon"
+        <TextView
+            android:id="@+id/recipe_foodtype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginBottom="13dp"
-            android:src="@drawable/ic_lunch"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/tag_foodtype"
+            android:fontFamily="@font/poppins_medbold"
+            android:paddingStart="8dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="3dp"
+            android:src="@drawable/tag_foodtype"
+            android:text="Breakfast"
+            android:textColor="@android:color/white"
+            android:textSize="9sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
