--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,10 +6,40 @@
     android:background="@drawable/background_gradient"
     tools:context=".fragment.SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="ini search" />
+        android:orientation="vertical">
+
+        <!-- Title -->
+        <TextView
+            android:id="@+id/myTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your ingredients,\nOur inspiration"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_medbold"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:layout_marginTop="38dp"
+            android:layout_marginBottom="20dp"
+            />
+
+<!--        search bar-->
+        <EditText
+            android:id="@+id/mySearchBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search Ingredient..."
+            android:layout_gravity="top" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvIngredientsData"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </FrameLayout>
