--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -34,7 +34,7 @@
             android:layout_marginEnd="20dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@string/chicken_cordon_bleu"/>
+            android:text=""/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -65,7 +65,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_medbold"
-                android:text="@string/chicken_cordon_bleu"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="32sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/time_to_make"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/food_type"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/servings"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +117,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="@string/_1_hr_30_min"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/detail_duration"
@@ -130,7 +130,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="@string/western"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/detail_foodtype"
@@ -153,7 +153,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="@string/_4_servings"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/detail_servings"
@@ -176,7 +176,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/ingredients"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -200,7 +200,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/cooking_steps"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -213,7 +213,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="@string/_1_lorem_2_ipsum_3_dolor_4_amet"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -226,7 +226,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/recipe_url"
+                android:text=""
                 android:textColor="@color/purple"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -239,7 +239,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="@string/https_sample_link"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintWidth_percent="0.8"
