--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -38,7 +38,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/trending_recipes"
+                        android:text="Trending Recipes"
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/white" />
@@ -48,7 +48,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/see_all"
+                        android:text="See All"
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="viewEnd"
                         android:textSize="20sp"
@@ -87,7 +87,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/quick_cook"
+                        android:text="Quick Cook"
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple" />
@@ -97,7 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/see_all"
+                        android:text="See All"
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="viewEnd"
                         android:textSize="20sp"
@@ -137,7 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/you_might_like"
+                        android:text="You might like"
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple" />
@@ -147,7 +147,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/see_all"
+                        android:text="See all"
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="viewEnd"
                         android:textSize="20sp"
