--- a/app/src/main/res/layout/item_recipe_list_smaller.xml
+++ b/app/src/main/res/layout/item_recipe_list_smaller.xml
@@ -71,7 +71,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_medbold"
             android:maxLines="1"
-            android:text="@string/chicken_cordon_bleu"
+            android:text=""
             android:textColor="@color/purple"
             android:textSize="13sp"
             app:layout_constraintBottom_toTopOf="@+id/recipe_foodtype_smaller"
@@ -86,7 +86,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="@string/_99_cookmarked"
+            android:text=""
             android:textColor="@color/greyHint"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
