--- a/app/src/main/res/layout/activity_see_all_recipe.xml
+++ b/app/src/main/res/layout/activity_see_all_recipe.xml
@@ -33,7 +33,7 @@
             android:layout_marginEnd="20dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@string/chicken_cordon_bleu"/>
+            android:text=""/>
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
