--- a/app/src/main/res/layout/item_recipe_list.xml
+++ b/app/src/main/res/layout/item_recipe_list.xml
@@ -65,7 +65,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/poppins_medbold"
-            android:text="@string/chicken_cordon_bleu"
+            android:text=""
             android:textColor="@color/purple"
             android:textSize="16sp"
             android:ellipsize="end"
@@ -81,7 +81,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="@string/_99_cookmarked"
+            android:text=""
             android:textColor="@color/greyHint"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
