--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,11 @@
         <item name="android:colorBackground">@color/purple</item>
     </style>
 
+    <style name="DialogAnimation" parent="Theme.AppCompat">
+        <item name="android:windowEnterAnimation">@anim/slide_in_animation</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_animation</item>
+    </style>
+
+
+
 </resources>
