--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -128,7 +128,7 @@
                 android:paddingTop="12sp"
                 android:paddingBottom="12sp"
                 android:paddingRight="18sp"
-
+                android:maxLength="2"
                 android:layout_marginEnd="9sp"/>
 
             <TextView
@@ -156,6 +156,7 @@
                 android:paddingTop="12sp"
                 android:paddingBottom="12sp"
                 android:paddingRight="18sp"
+                android:maxLength="2"
                 android:layout_marginStart="9sp"/>
         </LinearLayout>
 
@@ -217,6 +218,7 @@
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/greyHint"
             android:inputType="number"
+            android:maxLength="3"
             android:paddingLeft="18sp"
             android:paddingTop="12sp"
             android:paddingBottom="12sp"
